@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024 SUSE LLC
+ * Copyright (c) 2024--2025 SUSE LLC
  *
  * This software is licensed to you under the GNU General Public License,
  * version 2 (GPLv2). There is NO WARRANTY for this software, express or
@@ -7,10 +7,6 @@
  * FOR A PARTICULAR PURPOSE. You should have received a copy of GPLv2
  * along with this software; if not, see
  * http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt.
- *
- * Red Hat trademarks are not licensed under GPLv2. No permission is
- * granted to use or replicate Red Hat trademarks that are incorporated
- * in this software or its documentation.
  */
 
 package com.suse.coco.configuration;
@@ -22,7 +18,6 @@ import com.suse.common.configuration.ResourceConfigurationSource;
 
 import java.util.List;
 import java.util.Properties;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -32,6 +27,7 @@ import java.util.stream.Stream;
  */
 public class DefaultConfiguration implements Configuration {
 
+    // These are the only properties that do not have a default value in configuration-defaults.properties
     private static final Stream<String> MANDATORY_PROPERTIES = Stream.of(
         "database_user",
         "database_password",
@@ -51,7 +47,7 @@ public class DefaultConfiguration implements Configuration {
 
         List<String> missingProperty = MANDATORY_PROPERTIES
             .filter(property -> configurationSource.getString(property).isEmpty())
-            .collect(Collectors.toList());
+            .toList();
 
         if (!missingProperty.isEmpty()) {
             throw new IllegalArgumentException("Mandatory configuration properties are missing: " + missingProperty);
@@ -60,44 +56,37 @@ public class DefaultConfiguration implements Configuration {
 
     @Override
     public String getDatabaseUser() {
-        return configurationSource.getString("database_user")
-            .orElseThrow(() -> new MissingConfigurationException("No value set for database_user"));
+        return configurationSource.requireString("database_user");
     }
 
     @Override
     public String getDatabasePassword() {
-        return configurationSource.getString("database_password")
-            .orElseThrow(() -> new MissingConfigurationException("No value set for database_password"));
+        return configurationSource.requireString("database_password");
     }
 
     @Override
     public String getDatabaseConnectionString() {
-        return configurationSource.getString("database_connection")
-            .orElseThrow(() -> new MissingConfigurationException("No value set for database_connection"));
+        return configurationSource.requireString("database_connection");
     }
 
     @Override
     public int getCorePoolSize() {
-        return configurationSource.getInteger("processor_corePoolSize")
-            .orElseThrow(() -> new MissingConfigurationException("No value set for database_connection"));
+        return configurationSource.requireInteger("processor_corePoolSize");
     }
 
     @Override
     public int getMaximumPoolSize() {
-        return configurationSource.getInteger("processor_maxPoolSize")
-            .orElseThrow(() -> new MissingConfigurationException("No value set for database_connection"));
+        return configurationSource.requireInteger("processor_maxPoolSize");
     }
 
     @Override
     public long getThreadKeepAliveInSeconds() {
-        return configurationSource.getInteger("processor_threadKeepAlive")
-            .orElseThrow(() -> new MissingConfigurationException("No value set for database_connection"));
+        return configurationSource.requireInteger("processor_threadKeepAlive");
     }
 
     @Override
     public int getBatchSize() {
-        return configurationSource.getInteger("processor_batchSize")
-            .orElseThrow(() -> new MissingConfigurationException("No value set for database_connection"));
+        return configurationSource.requireInteger("processor_batchSize");
     }
 
     @Override
